resolving overflow issues

--- a/src/Components/Features/Features.css
+++ b/src/Components/Features/Features.css
@@ -23,8 +23,12 @@
     justify-content: center;
     padding: 5px;
     gap: 20px;
-    background: #F0F1EB;
+    /* background: rgb(120,119,136);
+background: linear-gradient(351deg, rgba(120,119,136,0) 0%, rgba(0,0,0,0.3715861344537815) 25%, rgba(255,255,255,0.6320903361344538) 100%);
+    border-radius: 10px;*/
     border-radius: 10px;
+    background: rgb(120, 119, 136);
+    background: linear-gradient(351deg, rgba(120, 119, 136, 0) 0%, rgba(179, 175, 175, 0.3715861344537815) 25%, rgba(255, 255, 255, 0.6320903361344538) 100%);
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.904);
 }
 
