--- a/src/Components/HeaderAd/HeaderAd.css
+++ b/src/Components/HeaderAd/HeaderAd.css
@@ -13,3 +13,10 @@
 
     }
 }
+
+@media (max-width:568px) {
+    .section {
+        display: none;
+    }
+
+}
